fuse-adapter-animalorder-soap/scripts/openshift/deployment_ros.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ${DEPL_NAME}
  namespace: ${NS}
  labels:
    app: ${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: ${DEPL_NAME}
  template:
    metadata:
      labels:
        deployment: ${DEPL_NAME}
#        metrics: prometheus-rhfuse-adapter
    spec:
      volumes:
        - name: keystore-cert
          secret:
            secretName: ${ROS_CERT_SECRET_NAME}
            defaultMode: 420
      containers:
        - resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: ${APP_NAME}
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: metrics
              containerPort: 8081
              protocol: TCP
            - name: https-ros
              containerPort: 8443
              protocol: TCP
          imagePullPolicy: Always
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          volumeMounts:
            - name: keystore-cert
              readOnly: true
              mountPath: /etc/keystore-cert/
          terminationMessagePolicy: File
          image: >-
            ${IMAGE}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
